parkrun-stats - More country fixes.